# scindo

./: .gitignore  CMakeLists.txt  README-stabby.md
cmake/: FindHTSlib.cmake
docker/: 000-add-proxy-cert  Dockerfile  Dockerfile-build  gather.sh
include/scindo/: annotated_kmer_set.hpp  atom.hpp  bam.hpp  bed.hpp  benjamini_hochberg.hpp  concurrent_deque.hpp  factor.hpp  fasta.hpp  fastq.hpp  files.hpp  gtf.hpp  gzip.hpp  kmer_set.hpp  kmers.hpp  lines_of_file.hpp  median.hpp  murmur3.hpp  nmf.hpp  okeefe.hpp  profile.hpp  stabby.hpp  summerizer.hpp  table.hpp  tsv.hpp  vcf.hpp
include/scindo/stabby/: dense_domain.hpp  schmidt.hpp  sparse_domain.hpp
include/scindo/table/: column.hpp
include/scindo/vcf/: parser.hpp
src/: CMakeLists.txt  asya.cpp  crispin.cpp  cuvoite.cpp  fraggle.cpp  hecil.cpp  perya.cpp  scindo.cpp
tests/: CMakeLists.txt  make-pileup.sh  test_annotated_kmer_set.cpp  test_bam.cpp  test_gtf.cpp  test_gzip.cpp  test_kmer_set.cpp
tests/data/: tiny-bam.bam  tiny.gtf
tests/stabby/: case001.json  test_cons.cpp  test_regressions.cpp
tests/vcf/: test_vcf.cpp
